# testbed

./: .gitignore  Cargo.toml  README.md  pyproject.toml
examples/: class_from_rust.py  foo.py  show_1d.py  sw.py
src/: lib.rs
testbed/: __init__.py
testbed/_rust/: __init__.py
testbed/engine/: modules.py
