[package]
name = "testbed"
version = "0.1.0"
authors = ["Hirotaka Kawashima <k.hirotaka@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "testbed"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]

[dependencies]
numpy = "0.11.0"
ndarray = "0.13.0"
