[tool.poetry]
name = "testbed"
version = "0.1.0"
description = "Testbed for writting a Python module with Rust."
authors = ["Hirotaka Kawashima <khirotaka@vivaldi.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.1"
maturin = "^0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[build-system.maturin]
requires = ["maturin"]
build-backend = "maturin"
